--- a/AJAXCRUD/src/main/webapp/member.html
+++ b/AJAXCRUD/src/main/webapp/member.html
@@ -223,7 +223,7 @@ $(document).ready(function(){
                 <th>name</th>
                 <th>age</th>
                 <th>gender</th>
-                <th>life</th>
+                <th>ssss</th>
             </tr>
         </thead>
         <tbody id="list">
